Sat Jan 15 19:28:32 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* NEWS: update
	* src/tds/query.c TODO: limit max size

Fri Jan 14 11:52:45 EST 2005	JK Lowden <jklowden@schemamania.org>
	* src/apps/bsqldb.c corrected 'go' batch separator

Fri Jan 14 11:48:27 EST 2005	JK Lowden <jklowden@schemamania.org>
	* TODO updated
	* src/dblib/bcp.c quote column names

Fri Jan 14  9:05:08 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/dblib.c:
	- quote database name in dbuse
	- removed useless casts
	* src/tds/query.c:
	- fixed id quoting

Thu Jan 13 16:17:26 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* TODO: updated
	* include/tds.h:
	- fix problem with long column name and multibyte charset
	* src/tds/query.c: remove a FIXME
	* src/tds/unittests/Makefile.am src/tds/unittests/utf8_3.c(added):
	- add a test for long column name

Thu Jan 13 11:07:27 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* TODO src/odbc/odbc.c:
	- updated TODO
	- finished compute fixes

Thu Jan 13  9:38:19 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/common.c src/odbc/unittests/compute.c:
	- finish compute test
	- allow compile of tests under win32

Wed Jan 12 21:42:47 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c src/odbc/unittests/compute.c:
	- fix metadata handling in compute
	- improve compute test
	* src/tds/token.c:
	- fix wrong return
	- handle error correctly in tds_process_result_tokens

Wed Jan 12 20:40:14 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* NEWS include/tds.h include/tdsodbc.h src/dblib/bcp.c:
	* src/odbc/odbc.c src/odbc/unittests/compute.c:
	* src/tds/mem.c src/tds/token.c:
	- removed tds_do_until_done (not used)
	- handle correctly COMPUTE in ODBC

Wed Jan 12  9:43:34 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* NEWS TODO doc/api_status.txt include/tds.h src/ctlib/cs.c:
	* src/dblib/dblib.c src/tds/login.c src/tds/mem.c:
	* src/tds/token.c: