@@ -1,3 +1,8 @@
+Sun Jan 16 10:45:05 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
+	* src/dblib/bcp.c:
+	- better quote
+	- fix possible memory leak
+
 Sat Jan 15 19:28:32 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
 	* NEWS: update
 	* src/tds/query.c TODO: limit max size
